infra/k3s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: anveshak
  labels:
    app.kubernetes.io/part-of: anveshak
